@@ -6,6 +6,9 @@ DESCRIPTION
     structures serialized via JSON to MediaWiki.
 
 SEE ALSO
+    Wikibase::Datatype::Struct::MediainfoSnak
+        Wikibase mediainfo snak structure serialization.
+
     Wikibase::Datatype::Struct::Reference
         Wikibase reference structure serialization.
 
