@@ -1,4 +1,5 @@
 0.07
+ - Add support for MediainfoSnak.
  - Rewrite Utils to abstract Snak way.
  - Update examples/ dir.
 
